fixed z-index

--- a/turkic/public/stylesheet.css
+++ b/turkic/public/stylesheet.css
@@ -54,6 +54,7 @@
     height : 100%;
     background-color : #ccc;
     opacity : 0.5;
+    z-index : 100000;
 }
 
 #turkic_donation
